Add cpu governors
Intelliactive, intellidemand2, lagfree, lionheart, smartassV2

--- a/arch/arm/configs/huashan_defconfig
+++ b/arch/arm/configs/huashan_defconfig
@@ -567,3 +567,11 @@ CONFIG_CRYPTO_DEV_QCE=m
 CONFIG_CRYPTO_DEV_QCEDEV=m
 CONFIG_CRC_CCITT=y
 CONFIG_NFC_PN544=y
+
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_LAGFREE=y
+CONFIG_CPU_FREQ_GOV_SMARTASSV2=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_INTELLIDEMAND2=y
+CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE=y
