--- a/arch/arm/configs/huashan_defconfig
+++ b/arch/arm/configs/huashan_defconfig
@@ -575,3 +575,5 @@ CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_INTELLIDEMAND2=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE=y
+
+CONFIG_HAS_EARLYSUSPEND=y
