--- a/arch/arm/configs/huashan_defconfig
+++ b/arch/arm/configs/huashan_defconfig
@@ -577,3 +577,7 @@ CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE=y
 
 CONFIG_HAS_EARLYSUSPEND=y
+CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_DYNAMIC_FSYNC=y
+
+CONFIG_FRAME_WARN=0
