--- a/arch/arm/configs/huashan_defconfig
+++ b/arch/arm/configs/huashan_defconfig
@@ -508,3 +508,5 @@ CONFIG_CPU_FREQ_GOV_INTELLIDEMAND2=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE=y
 
+CONFIG_HAS_EARLYSUSPEND=y
+
