--- a/arch/arm/configs/huashan_defconfig
+++ b/arch/arm/configs/huashan_defconfig
@@ -1,7 +1,7 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-Williams-MIUI"
-CONFIG_KERNEL_LZO=y
+CONFIG_KERNEL_XZ=y
 CONFIG_SYSVIPC=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
@@ -509,4 +509,8 @@ CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE=y
 
 CONFIG_HAS_EARLYSUSPEND=y
+CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_DYNAMIC_FSYNC=y
+
+CONFIG_FRAME_WARN=0
 
