--- a/arch/arm/configs/huashan_defconfig
+++ b/arch/arm/configs/huashan_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-Williams-MIUI"
+CONFIG_LOCALVERSION="-Williams-cm10.1"
 CONFIG_KERNEL_XZ=y
 CONFIG_SYSVIPC=y
 CONFIG_TASKSTATS=y
