Add sound control 3.0

--- a/arch/arm/configs/huashan_defconfig
+++ b/arch/arm/configs/huashan_defconfig
@@ -583,3 +583,7 @@ CONFIG_OVERCLOCK=y
 CONFIG_IKCONFIG_PROC=y
 
 CONFIG_FRAME_WARN=0
+
+CONFIG_SOUND_CONTROL_HAX_GPL=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+
