--- a/arch/arm/configs/huashan_defconfig
+++ b/arch/arm/configs/huashan_defconfig
@@ -568,6 +568,8 @@ CONFIG_CRYPTO_DEV_QCEDEV=m
 CONFIG_CRC_CCITT=y
 CONFIG_NFC_PN544=y
 
+CONFIG_WCNSS_MEM_PRE_ALLOC=y
+
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_LAGFREE=y
 CONFIG_CPU_FREQ_GOV_SMARTASSV2=y
