--- a/arch/arm/configs/huashan_defconfig
+++ b/arch/arm/configs/huashan_defconfig
@@ -1,6 +1,7 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-Williams-cm11-"
+CONFIG_LOCALVERSION_AUTO=n
 CONFIG_SYSVIPC=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
